--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,10 +20,11 @@ requirements:
     host:
         - python >=3.8
         - pip
+        - setuptools
     run:
         - python >=3.8
         - numpy >=1.19.0
-        - matplotlib
+        - matplotlib-base
         - networkx
         - pillow
         - rdkit
